# ai-os

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  Makefile  README.md
.github/workflows/: ci.yml  release.yml
aios-core/: Cargo.toml
aios-core/src/: flags.rs  lib.rs
aios-core/src/commands/: cat.rs  chmod.rs  cp.rs  date.rs  df.rs  du.rs  echo.rs  env_cmd.rs  find.rs  free.rs  grep.rs  head.rs  hostname.rs  kill.rs  ls.rs  mkdir.rs  mod.rs  mv.rs  ps.rs  pwd.rs  rm.rs  rmdir.rs  tail.rs  top.rs  uname.rs  uptime.rs  wc.rs  whoami.rs
aios-init/: Cargo.toml
aios-init/src/: config.rs  logger.rs  main.rs  service.rs
aios-kernel/: Cargo.toml
aios-kernel/src/: device.rs  fs.rs  lib.rs  memory.rs  network.rs  process.rs
aios-knowledge/: Cargo.toml
aios-knowledge/src/: index.rs  lib.rs  store.rs
aios-knowledge/src/docs/: overview.md
aios-llm/: Cargo.toml
aios-llm/src/: backend.rs  cloud.rs  config.rs  context.rs  lib.rs  local.rs  network.rs  router.rs
aios-shell/: Cargo.toml
aios-shell/src/: completion.rs  executor.rs  history.rs  main.rs  main_os.rs  parser.rs  prompt.rs  router.rs  scripting.rs
config/: aios.toml  llm.toml  llm.yml
scripts/: build-qemu-image.sh
