[workspace]
members = [
    "aios-kernel",
    "aios-core",
    "aios-shell",
    "aios-llm",
    "aios-init",
    "aios-knowledge",
]
resolver = "2"

[workspace.package]
version = "0.1.4"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/tgifriday/ai-os"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
futures = "0.3"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
