[package]
name = "aios-core"
description = "AIOS core utilities - Rust reimplementations of essential Linux commands"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
aios-kernel = { path = "../aios-kernel" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }

[target.'cfg(unix)'.dependencies]
users = "0.11"
