[package]
name = "aios-init"
description = "AIOS init system and service manager"
version.workspace = true
edition.workspace = true

[[bin]]
name = "aios-init"
path = "src/main.rs"

[dependencies]
aios-llm = { path = "../aios-llm" }
aios-knowledge = { path = "../aios-knowledge" }
tokio = { workspace = true }
serde = { workspace = true }
toml = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
