[package]
name = "aios-shell"
description = "AIOS AI-powered shell - the primary user interface"
version.workspace = true
edition.workspace = true

[[bin]]
name = "aish"
path = "src/main.rs"

[[bin]]
name = "aios-shell"
path = "src/main.rs"

[[bin]]
name = "aios-os"
path = "src/main_os.rs"

[dependencies]
aios-kernel = { path = "../aios-kernel" }
aios-core = { path = "../aios-core" }
aios-llm = { path = "../aios-llm" }
aios-knowledge = { path = "../aios-knowledge" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
crossterm = "0.28"
chrono = { workspace = true }
dirs = "6"
glob = "0.3"
libc = "0.2"
